{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 61,
  "lineage": "3dbbd5b1-02d6-6882-b3f5-72b39ae60b98",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-081ae36cc24c46797",
            "arn": "arn:aws:ec2:us-east-1:649671357648:elastic-ip/eipalloc-081ae36cc24c46797",
            "domain": "vpc",
            "id": "eipalloc-081ae36cc24c46797",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-32-198-222-16.compute-1.amazonaws.com",
            "public_ip": "32.198.222.16",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "multicloud-devsecops-dev-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "multicloud-devsecops-dev-nat-eip",
              "Project": "multicloud-devsecops"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649671357648:internet-gateway/igw-084628570f49c7753",
            "id": "igw-084628570f49c7753",
            "owner_id": "649671357648",
            "region": "us-east-1",
            "tags": {
              "Name": "multicloud-devsecops-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "multicloud-devsecops-dev-igw",
              "Project": "multicloud-devsecops"
            },
            "vpc_id": "vpc-0640ef6e789c53382"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:649671357648:loadbalancer/app/multicloud-devsecops-dev-alb/1236193d7be94eed",
            "arn_suffix": "app/multicloud-devsecops-dev-alb/1236193d7be94eed",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "multicloud-devsecops-dev-alb-977930594.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:649671357648:loadbalancer/app/multicloud-devsecops-dev-alb/1236193d7be94eed",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "multicloud-devsecops-dev-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0be41bcdd658dab9c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02befc7c60f7d8414"
              },
              {
                "subnet_id": "subnet-0f147408e186fea0f"
              }
            ],
            "subnets": [
              "subnet-02befc7c60f7d8414",
              "subnet-0f147408e186fea0f"
            ],
            "tags": {
              "Name": "multicloud-devsecops-dev-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "multicloud-devsecops-dev-alb",
              "Project": "multicloud-devsecops"
            },
            "vpc_id": "vpc-0640ef6e789c53382",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:649671357648:listener/app/multicloud-devsecops-dev-alb/1236193d7be94eed/9a433ced967d694c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:649671357648:targetgroup/mc-dev-jenkins-tg/72cc6004ff0be434",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:649671357648:listener/app/multicloud-devsecops-dev-alb/1236193d7be94eed/9a433ced967d694c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:649671357648:loadbalancer/app/multicloud-devsecops-dev-alb/1236193d7be94eed",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "multicloud-devsecops"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.jenkins",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:649671357648:targetgroup/mc-dev-jenkins-tg/72cc6004ff0be434",
            "arn_suffix": "targetgroup/mc-dev-jenkins-tg/72cc6004ff0be434",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/login",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:649671357648:targetgroup/mc-dev-jenkins-tg/72cc6004ff0be434",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mc-dev-jenkins-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "multicloud-devsecops-dev-jenkins-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "multicloud-devsecops-dev-jenkins-tg",
              "Project": "multicloud-devsecops"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0640ef6e789c53382"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-081ae36cc24c46797",
            "association_id": "eipassoc-0d348385a78dd22e8",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-07cb130d3507278cf",
            "network_interface_id": "eni-0fb206f063716361a",
            "private_ip": "10.0.1.236",
            "public_ip": "32.198.222.16",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f147408e186fea0f",
            "tags": {
              "Name": "multicloud-devsecops-dev-nat-gateway"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "multicloud-devsecops-dev-nat-gateway",
              "Project": "multicloud-devsecops"
            },
            "vpc_id": "vpc-0640ef6e789c53382"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649671357648:route-table/rtb-0cf25cec4f8b32472",
            "id": "rtb-0cf25cec4f8b32472",
            "owner_id": "649671357648",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07cb130d3507278cf",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "multicloud-devsecops-dev-private-rt",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "multicloud-devsecops-dev-private-rt",
              "Project": "multicloud-devsecops",
              "Tier": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0640ef6e789c53382"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649671357648:route-table/rtb-05b1473b3e650abe5",
            "id": "rtb-05b1473b3e650abe5",
            "owner_id": "649671357648",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-084628570f49c7753",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "multicloud-devsecops-dev-public-rt",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "multicloud-devsecops-dev-public-rt",
              "Project": "multicloud-devsecops",
              "Tier": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0640ef6e789c53382"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0113d1e654426928b",
            "region": "us-east-1",
            "route_table_id": "rtb-0cf25cec4f8b32472",
            "subnet_id": "subnet-0e0f8173157add9b0"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "private_b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2b0c85dd76c9074",
            "region": "us-east-1",
            "route_table_id": "rtb-0cf25cec4f8b32472",
            "subnet_id": "subnet-03599a2b70e29510b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4a7b735606272d6",
            "region": "us-east-1",
            "route_table_id": "rtb-05b1473b3e650abe5",
            "subnet_id": "subnet-0f147408e186fea0f"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "public_b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7da38b94f984e48",
            "region": "us-east-1",
            "route_table_id": "rtb-05b1473b3e650abe5",
            "subnet_id": "subnet-02befc7c60f7d8414"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649671357648:security-group/sg-0be41bcdd658dab9c",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be41bcdd658dab9c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "multicloud-devsecops-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "649671357648",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "multicloud-devsecops-dev-alb-sg",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "multicloud-devsecops-dev-alb-sg",
              "Project": "multicloud-devsecops",
              "Tier": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0640ef6e789c53382"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649671357648:security-group/sg-0c089837fe625f181",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c089837fe625f181",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow EKS API traffic from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "multicloud-devsecops-dev-eks-sg",
            "name_prefix": "",
            "owner_id": "649671357648",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "multicloud-devsecops-dev-eks-sg",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "multicloud-devsecops-dev-eks-sg",
              "Project": "multicloud-devsecops",
              "Tier": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0640ef6e789c53382"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649671357648:security-group/sg-0fd4d7f235b346eef",
            "description": "Security group for Jenkins server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd4d7f235b346eef",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Jenkins traffic from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0be41bcdd658dab9c"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "multicloud-devsecops-dev-jenkins-sg",
            "name_prefix": "",
            "owner_id": "649671357648",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "multicloud-devsecops-dev-jenkins-sg",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "multicloud-devsecops-dev-jenkins-sg",
              "Project": "multicloud-devsecops",
              "Tier": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0640ef6e789c53382"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649671357648:subnet/subnet-0e0f8173157add9b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0f8173157add9b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "649671357648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "multicloud-devsecops-dev-private_a",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "multicloud-devsecops-dev-private_a",
              "Project": "multicloud-devsecops",
              "Tier": "Private"
            },
            "vpc_id": "vpc-0640ef6e789c53382"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "private_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649671357648:subnet/subnet-03599a2b70e29510b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03599a2b70e29510b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "649671357648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "multicloud-devsecops-dev-private_b",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "multicloud-devsecops-dev-private_b",
              "Project": "multicloud-devsecops",
              "Tier": "Private"
            },
            "vpc_id": "vpc-0640ef6e789c53382"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649671357648:subnet/subnet-0f147408e186fea0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f147408e186fea0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "649671357648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "multicloud-devsecops-dev-public_a",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "multicloud-devsecops-dev-public_a",
              "Project": "multicloud-devsecops",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0640ef6e789c53382"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "public_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649671357648:subnet/subnet-02befc7c60f7d8414",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02befc7c60f7d8414",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "649671357648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "multicloud-devsecops-dev-public_b",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "multicloud-devsecops-dev-public_b",
              "Project": "multicloud-devsecops",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0640ef6e789c53382"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649671357648:vpc/vpc-0640ef6e789c53382",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0568473dfa3a73c8d",
            "default_route_table_id": "rtb-01b994bd52db00a05",
            "default_security_group_id": "sg-068ca5bab41e91cf6",
            "dhcp_options_id": "dopt-04711967b50501de0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0640ef6e789c53382",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01b994bd52db00a05",
            "owner_id": "649671357648",
            "region": "us-east-1",
            "tags": {
              "Name": "multicloud-devsecops-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "multicloud-devsecops-dev-vpc",
              "Project": "multicloud-devsecops"
            }
          }
        }
      ]
    }
  ]
}